<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milton Common Demo</string>
    <string name="select_all">全选</string>
    <string name="zone_alarm_fire">Fire alarm</string>
    <string name="zone_alarm_help">Help</string>
    <string name="zone_alarm_gas">Gas leak</string>
    <string name="zone_alarm_thief">Thief</string>
    <string name="zone_alarm_emergency">Emergency</string>

    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="all_rights_reserved">Copyright © 2012-2016 Milton. All Rights Reserved.</string>
    <string name="setting_about_description">弹指间 心无间</string>
    <string name="accessibility_service_description">智能安装服务，无需用户的任何操作就可以自动安装程序。</string>
    <string name="action_settings">Settings</string>
    <!-- Title of the navigation drawer, used by accessibility to announce state changes. -->
    <string name="drawer_title">Navigation</string>

    <!-- Description of the icon that opens the navigation drawer, used by accessibility. -->
    <string name="drawer_open">Open navigation drawer</string>

    <!-- Description of the icon that closes the navigation drawer, used by accessibility. -->
    <string name="drawer_close">Close navigation drawer</string>
    <string name="coverview_tip">上滑可关闭此界面</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="s1">SYSTEM_UI_FLAG_VISIBLE</string>
    <string name="s2">INVISIBLE</string>
    <string name="s3">SYSTEM_UI_FLAG_FULLSCREEN</string>
    <string name="s4">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
    <string name="s5">SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION</string>
    <string name="s6">SYSTEM_UI_LAYOUT_FLAGS</string>
    <string name="s7">SYSTEM_UI_FLAG_HIDE_NAVIGATION</string>
    <string name="s8">SYSTEM_UI_FLAG_LOW_PROFILE</string>
    <string name="double_click_exit">Click again for exiting.</string>
    <string name="title_activity_widget_common">WidgetCommonActivity</string>

    <string name="pick_photo">Pick Photo</string>
    <string name="pick_photo_without_camera">Pick Photo Without Camera &amp;&amp; Disable Preview</string>
    <string name="pick_one_photo">Pick Single Photo</string>
    <string name="pick_photo_gif">Pick Photos (show gif)</string>
    <string name="multiple_pick_photo">Multiple Pick Photo</string>

    <!--MixtureTextView start-->
    <string name="text1">
        小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。
        小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。
    </string>
    <string name="text2">8月12日，天津港的惊天巨响hello world how are you ，炸碎了很多人的hello world how are
        you心，人们在感动于救人的同时，禁不住愤怒地责问，为什么一次次重特大hello world how are you事故中生命的代价换不来应有的平hello world how are
        you安?下个血淋淋的场面将会在哪里出现?是的，我们已经有点伤不起了，因为世间没有什么比生命更宝贵。为了生命的美好，在生产中投入多大的hello world how are
        you安全成本都不算昂贵。更何况2013年6月，针对全国多个地区接连发生多起重特大安全生产事故，习近平总书记就已强调：“重特大安全生产事故，造成重大人员伤亡和财产损失，必须引起hello
        world how are you高度重视。人命关天，发展决不能以牺牲人的生命为代价。这必须作为一条不可逾越的红线。”时隔不久，为什么又一次以决堤式的hello world how
        are you程度来冲毁这条红线，谁该hello world how are you为之买单?
    </string>

    <array name="texts">
        <item>
            小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。
            小时候，奶奶常给我讲牛郎织女的故事，还说七夕晚上，在葡萄树下能听到牛郎织女说情话。”1976年出生的王先生说，在他六岁时的“七夕”前，他向亲戚要了一棵葡萄树苗，栽在屋前的菜地里，为了等到“七夕”去听牛郎织女说话，他每天都很认真给葡萄树浇水。
        </item>
        <item>8月12日，天津港的惊天巨响hello world how are you ，炸碎了很多人的hello world how are
            you心，人们在感动于救人的同时，禁不住愤怒地责问，为什么一次次重特大hello world how are you事故中生命的代价换不来应有的平hello world how
            are
            you安?下个血淋淋的场面将会在哪里出现?是的，我们已经有点伤不起了，因为世间没有什么比生命更宝贵。为了生命的美好，在生产中投入多大的hello world how are
            you安全成本都不算昂贵。更何况2013年6月，针对全国多个地区接连发生多起重特大安全生产事故，习近平总书记就已强调：“重特大安全生产事故，造成重大人员伤亡和财产损失，必须引起hello
            world how are you高度重视。人命关天，发展决不能以牺牲人的生命为代价。这必须作为一条不可逾越的红线。”时隔不久，为什么又一次以决堤式的hello world
            how
            are you程度来冲毁这条红线，谁该hello world how are you为之买单?
        </item>
    </array>
    <!--MixtureTextView end -->
    <!--UCrop start-->
    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>

    <string name="description_cropped_image">Cropped image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <!--UCrop end-->
    <string name="pattern">紫陌红尘，蓦然{回首}。多少的{春花秋月};多少的{逝水沉香};多少的{海誓山盟}，如沿途的风景{花开花谢}。人世间的情缘{触痛了}多少无言的{感慨}，{情深缘浅}的风吹散了多少{相聚离散}。花开是有情，花落是无意。来者是{萍水相逢}，去者是{江湖相忘}。缘起时，我在{人群}中看到你。缘灭时，你{消失}在人群中。</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_door">DoorActivity</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
</resources>